minor checkbox alignment fix

--- a/webapp/WEB-INF/base/emfrontend/theme/styles/theme.css
+++ b/webapp/WEB-INF/base/emfrontend/theme/styles/theme.css
@@ -6615,9 +6615,8 @@ div.tableheaderactions a
 }
 
 .checkbox input[type="checkbox"] {
-    float: none;
-    margin-top: 0px;
-    margin-left: 0px;
+    margin-top: -2px;
+    margin-left: 1px;
 }
 
 .checkbox {
